# TypedHOL-Haskell

./: ChangeLog.md  HOL.lhs  LICENSE  Leo3.lhs  README.md  SYO016^1.lhs  TPTP_THF.lhs  TypedHOL.cabal  USAGE.md
Dialect/: ConvertionUtils.lhs
Dialect/TPTP/: Thf.lhs
TPTP/: SYO016^1.p
src/: HOL.lhs  Prover.lhs  SYO016^1.lhs  SZSStatus.lhs  TPTP_THF.lhs
src/Logic/: HOL.lhs  Prover.lhs
src/Logic/HOL/: HOLTypeReconstruction.lhs  Internal.lhs  Some.lhs
src/Logic/HOL/Internal/: Some.lhs
src/Logic/Prover/: SZSStatus.lhs
src/Logic/Prover/HOL/: Leo3.lhs
src/Logic/TPTP/: ParserCore.lhs  THF.lhs  THF_Parser.lhs
src/Logic/TPTP/OldTHF/: ConstParser.lhs  Parser.lhs  TermParser.lhs  TypeParser.lhs  _THFParser.lhs
src/Logic/TPTP/THF/: AST.lhs  ASTParser.lhs  ConstParser.lhs  Parser.lhs  TypeDeclerationParser.lhs  TypeParser.lhs
src/Logic/TPTP/THF/AST/: Internal.lhs
src/Logic/TPTP/THF/AST/Internal/: AbstractTHFFileParser.lhs  AbstractTHFFormulaeParser.lhs  ConstParser.lhs  TermParser.lhs  TypeParser.lhs  VarParser.lhs
src/Logic/TPTP/THF/ASTParser/Internal/: AbstractTHFFileParser.lhs  AbstractTHFFormulaeParser.lhs  ConstParser.lhs  THFFileParser.lhs  TermParser.lhs  TypeParser.lhs  VarParser.lhs
src/Prover/HOL/: Leo3.lhs
